# Vinifera

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CREDITS.md  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_enhancement.md  feature_enhancement.yml  vanilla_bugfix_request.md  vanilla_bugfix_request.yml  vinifera_bugfix_request.md  vinifera_bugfix_request.yml
.github/workflows/: nightly.yml  pr-doc-checker.yml  pull_request.yml  pull_request_comment.yml  push.yml  release.yml
cmake/modules/: FetchRepository.cmake  GitWatcher.cmake  GlobUtil.cmake  ProjectFilters.cmake  WindowsCopyFiles.cmake
docs/: AI-Scripting-and-Mapping.md  Bugfixes.md  Contributing.md  Fixed-or-Improved-Logics.md  General-Info.md  Mapping.md  Miscellaneous.md  Miscellanous.md  New-Features-and-Enhancements.md  New-or-Enhanced-Logics.md  User-Interface.md  Whats-New.md  conf.py  index.md  requirements.txt
docs/_static/css/: dark.css  index.css
res/: dialog.rc  icon.rc  resource.h  version.rc
src/: vinifera_const.cpp  vinifera_const.h  vinifera_defines.h  vinifera_functions.cpp  vinifera_functions.h  vinifera_gitinfo.cpp.in  vinifera_globals.cpp  vinifera_globals.h  vinifera_hooks.cpp  vinifera_newdel.cpp  vinifera_util.cpp  vinifera_util.h
src/base/: always.h  endiantype.h  intrinsics.h  macros.h
src/bugfix/: bugfix_hooks.cpp  bugfix_hooks.h  bugfixes.cpp  bugfixes.h
src/cncnet/cncnet4/: cncnet4.cpp  cncnet4.h  cncnet4_globals.cpp  cncnet4_globals.h  cncnet4_hooks.cpp  cncnet4_hooks.h  cncnet4_net.cpp  cncnet4_net.h
src/cncnet/cncnet5/: cncnet5_globals.cpp  cncnet5_globals.h  cncnet5_hooks.cpp  cncnet5_hooks.h  cncnet5_wspudp.cpp  cncnet5_wspudp.h
src/core/: blowfish.cpp  blowfish.h  blowpipe.cpp  blowpipe.h  blowstraw.cpp  blowstraw.h  cpudetect.cpp  cpudetect.h  filepng.cpp  filepng.h  fixedstring.h  sha.cpp  sha.h  stristr.cpp  stristr.h  surfacescale.cpp  surfacescale.h
src/crt/: crt_hooks.cpp  crt_hooks.h
src/debug/: asserthandler.cpp  asserthandler.h  debug_hooks.cpp  debug_hooks.h  debughandler.cpp  debughandler.h  debughlp.cpp  debughlp.h  exceptionhandler.cpp  exceptionhandler.h  getreg.h  minidump.cpp  minidump.h  purecallhandler.cpp  purecallhandler.h  stackdump.cpp  stackdump.h
src/dshowvideo/: dshowrenderer.cpp  dshowrenderer.h  dshowutil.cpp  dshowutil.h  dshowvideo.cpp  dshowvideo.h  dshowvideo_hooks.cpp  dshowvideo_hooks.h
src/extensions/: container.h  ext_hooks.cpp  extension.cpp  extension.h  extension_globals.cpp  extension_globals.h  extension_hooks.cpp  extension_hooks.h  extension_saveload.cpp  extension_saveload.h
src/extensions/abstract/: abstractext.cpp  abstractext.h  abstractext_hooks.cpp  abstractext_hooks.h  abstractext_init.cpp  abstractext_init.h
src/extensions/abstracttype/: abstracttypeext.cpp  abstracttypeext.h
src/extensions/aircraft/: aircraftext.cpp  aircraftext.h  aircraftext_hooks.cpp  aircraftext_hooks.h  aircraftext_init.cpp  aircraftext_init.h
src/extensions/aircrafttype/: aircrafttypeext.cpp  aircrafttypeext.h  aircrafttypeext_hooks.cpp  aircrafttypeext_hooks.h  aircrafttypeext_init.cpp  aircrafttypeext_init.h
src/extensions/aitriggertype/: aitriggertypeext_hooks.cpp  aitriggertypeext_hooks.h
src/extensions/anim/: animext.cpp  animext.h  animext_hooks.cpp  animext_hooks.h  animext_init.cpp  animext_init.h
src/extensions/animtype/: animtypeext.cpp  animtypeext.h  animtypeext_hooks.cpp  animtypeext_hooks.h  animtypeext_init.cpp  animtypeext_init.h
src/extensions/building/: buildingext.cpp  buildingext.h  buildingext_functions.cpp  buildingext_functions.h  buildingext_hooks.cpp  buildingext_hooks.h  buildingext_init.cpp  buildingext_init.h
src/extensions/buildingtype/: buildingtypeext.cpp  buildingtypeext.h  buildingtypeext_hooks.cpp  buildingtypeext_hooks.h  buildingtypeext_init.cpp  buildingtypeext_init.h
src/extensions/bullet/: bulletext_hooks.cpp  bulletext_hooks.h
src/extensions/bullettype/: bullettypeext.cpp  bullettypeext.h  bullettypeext_hooks.cpp  bullettypeext_hooks.h  bullettypeext_init.cpp  bullettypeext_init.h
src/extensions/campaign/: campaignext.cpp  campaignext.h  campaignext_hooks.cpp  campaignext_hooks.h  campaignext_init.cpp  campaignext_init.h
src/extensions/cargo/: cargoext_hooks.cpp  cargoext_hooks.h
src/extensions/ccfile/: ccfileext_hooks.cpp  ccfileext_hooks.h
src/extensions/ccini/: cciniext_hooks.cpp  cciniext_hooks.h
src/extensions/cd/: cdext_hooks.cpp  cdext_hooks.h
src/extensions/cdfile/: cdfileext_hooks.cpp  cdfileext_hooks.h
src/extensions/cell/: cellext_const.cpp  cellext_const.h  cellext_hooks.cpp  cellext_hooks.h
src/extensions/combat/: combatext_hooks.cpp  combatext_hooks.h
src/extensions/command/: commandext.cpp  commandext.h  commandext_functions.cpp  commandext_functions.h  commandext_hooks.cpp  commandext_hooks.h
src/extensions/credit/: creditext_hooks.cpp  creditext_hooks.h
src/extensions/display/: displayext_hooks.cpp  displayext_hooks.h
src/extensions/drivelocomotor/: drivelocomotionext_hooks.cpp  drivelocomotionext_hooks.h
src/extensions/dropship/: dropshipext_hooks.cpp  (+1 more)
src/hooker/: dllmain.cpp  hooker.cpp  hooker.h  hooker_crt.cpp  hooker_crt.h  hooker_macros.h  launcher.cpp.in  mapview.cpp  mapview.h  setup_hooks.cpp  setup_hooks.h
src/new/: ebolt.cpp  ebolt.h
src/spawner/: custommixes.cpp  latencylevel.cpp  latencylevel.h  nethack.cpp  nethack.h  protocolzero.cpp  protocolzero.h  protocolzero_hooks.cpp  quickmatch.cpp  randommap.cpp  spawner.cpp  spawner.h  spawner_hooks.cpp  spawner_hooks.h  spawnerconfig.cpp  spawnerconfig.h  spectator.cpp  statistics.cpp
src/util/: miscutil.cpp  miscutil.h  winutil.cpp  winutil.h
src/vinifera/: vinifera_const.cpp  vinifera_defines.h  vinifera_functions.cpp  vinifera_functions.h  vinifera_gitinfo.h  vinifera_gitinfo.h.in  vinifera_globals.cpp  vinifera_globals.h  vinifera_hooks.cpp  vinifera_hooks.h  vinifera_newdel.cpp  vinifera_newdel.h  vinifera_saveload.cpp  vinifera_saveload.h  vinifera_savever.cpp  vinifera_savever.h  vinifera_util.cpp  vinifera_util.h
(+421 files in other folders)
